# graph_contraction

./: .gitignore  CMakeLists.txt  Makefile  README.md  debug.py  debug2.py  generate.py  img640x480.npy  range_image_tracker.py
include/gc/: core.hpp  policies.hpp  print.hpp  quad.hpp
py/: graphcontraction.pyx  libeigenmap.pxd  range_image_tracker.py
src/: eigenmap.cpp  example.cpp  graphcontraction.cpp  qh_example.cpp
